--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 
+[Try online](https://people.inf.elte.hu/divip/frp_agda/index.html)
+
 How to compile with Agda 2.5.4.1:
 
     agda --js --no-main Reactive.agda
